[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/objects/cannons/SimpleCannon/SimpleCanon.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/objects/Tower/Tower.gd" type="Script" id=2]
[ext_resource path="res://scenes/miscs/SelectArea/SelectArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/miscs/Capturable/Capturable.tscn" type="PackedScene" id=4]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SphereShape" id=2]
radius = 115.086

[sub_resource type="SphereShape" id=3]
radius = 13.1756

[node name="Tower" type="Spatial" groups=[
"tower",
]]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="Cannon" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
damage = 5

[node name="DetectionArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="SelectArea" parent="." groups=[
"tower",
] instance=ExtResource( 3 )]
group_target = "tower"

[node name="CollisionShape" parent="SelectArea" index="0"]
shape = SubResource( 3 )

[node name="Capturable" parent="." instance=ExtResource( 4 )]

[node name="SearchAwaitTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="timeout" from="SearchAwaitTimer" to="." method="_on_SearchAwaitTimer_timeout"]

[editable path="SelectArea"]
